Update project from rbase template to Cognify

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "rbase"
-version = "0.2.2"
+name = "cognify"
+version = "0.1.0"
 authors = ["LSH <github@lsh.tech>"]
 edition = "2021"
-description = "Github template to setup the CI and cargo publish"
+description = "Cognify"
 license = "GPL-3.0"
 
 
