feat: embeddings trait system with local Ollama implementation
- Define EmbeddingProvider trait for extensible embedding backends
- Implement LocalEmbeddingProvider using Ollama API
- Support for nomic-embed-text (768 dims) and mxbai-embed-large (1024 dims)
- Configure Ollama endpoint and model selection
- Validate embedding dimensions match expected size
- Designed for future implementations (OpenAI, etc.)
- Comprehensive unit tests (4 passing, 1 integration test ignored)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = "1.0"
 tokio = { version = "1.35", features = ["full"] }
 async-trait = "0.1"
 meilisearch-sdk = "0.28"
+reqwest = { version = "0.12", features = ["json"] }
 
 [dev-dependencies]
 tempfile = "3.10"
