feat: CLI integration with all commands
- Implement watch command for filesystem monitoring
- Implement tag command for single file tagging
- Implement index command for Meilisearch indexing
- Implement search command for semantic search
- Implement organize command with preview and confirmation
- Full integration of all modules (watcher, tagger, llm, embeddings, indexer, organizer)
- Interactive confirmation prompts using dialoguer
- Dry-run support for organize command
- All commands properly handle errors and provide user feedback

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 description = "The Cognitive File System — it understands and organizes your files automatically"
 license = "GPL-3.0"
 
+[[bin]]
+name = "cognifs"
+path = "src/main.rs"
+
 [dependencies]
 notify = "6.1"
 blake3 = "1.5"
@@ -16,6 +20,9 @@ tokio = { version = "1.35", features = ["full"] }
 async-trait = "0.1"
 meilisearch-sdk = "0.28"
 reqwest = { version = "0.12", features = ["json"] }
+clap = { version = "4.4", features = ["derive"] }
+dialoguer = "0.11"
+walkdir = "2"
 
 [dev-dependencies]
 tempfile = "3.10"
