--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ reqwest = { version = "0.12", features = ["json"] }
 clap = { version = "4.4", features = ["derive"] }
 dialoguer = "0.11"
 walkdir = "2"
+toml = "0.8"
 
 [dev-dependencies]
 tempfile = "3.10"
