--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - MEILI_MASTER_KEY=${MEILI_MASTER_KEY:-}
       - MEILI_ENV=development
     volumes:
-      - meili_data:/meili_data
+      - ./data/meili_data:/meili_data
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:7700/health"]
