security: bind docker services to localhost only
- Change Meilisearch port binding to 127.0.0.1:7700 (localhost only)
- Change Ollama port binding to 127.0.0.1:11434 (localhost only)
- Prevents services from being accessible on all network interfaces
- Improves security by default

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: getmeili/meilisearch:latest
     container_name: cognifs-meilisearch
     ports:
-      - "7700:7700"
+      - "127.0.0.1:7700:7700"
     environment:
       - MEILI_MASTER_KEY=${MEILI_MASTER_KEY:-}
       - MEILI_ENV=development
@@ -22,19 +22,13 @@ services:
     image: ollama/ollama:latest
     container_name: cognifs-ollama
     ports:
-      - "11434:11434"
+      - "127.0.0.1:11434:11434"
     volumes:
-      - ollama_data:/root/.ollama
+      - ./data/ollama_data:/root/.ollama
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:11434/api/tags"]
       interval: 10s
       timeout: 5s
       retries: 5
-
-volumes:
-  meili_data:
-    driver: local
-  ollama_data:
-    driver: local
 
