feat: Add support for ZIP and CSV files, improve file handling
- Add ZIP file handler with native Rust zip crate (no external unzip needed)
  - Extracts text from text files within archives
  - Provides metadata (file count, file list, sizes, text file count)

- Add CSV file handler with csv crate
  - Extracts CSV content as text
  - Provides metadata (headers, column count, row count)

- Centralize file size check in SemanticSource trait
  - All file types now check size before reading (empty files return empty string)
  - Moved size check logic to trait level (DRY principle)
  - Added to_text_impl() method for type-specific implementations

- Improve handling of macOS metadata files (._*)
  - Added is_macos_metadata_file() utility function
  - Better handling of binary/corrupted files

- Replace external pdftotext with native Rust libraries
  - Use pdf-extract and lopdf crates (managed by Cargo)
  - Extract PDF metadata (title, author, subject, keywords, page count)
  - No need for external Poppler utils installation

- Add updated_at field to FileMeta
  - Track both creation and modification times
  - Updated all FileMeta::new() calls throughout codebase

- Reorganize file types into separate files
  - Each file type in its own file (txt.rs, md.rs, pdf.rs, csv.rs, zip.rs, generic.rs)
  - Better code organization and maintainability

All tests passing

--- a/config/settings.toml
+++ b/config/settings.toml
@@ -7,7 +7,7 @@
 url = "http://127.0.0.1:7700"
 # Optional API key (can also be set via MEILI_MASTER_KEY env var)
 # Leave empty for development (matches docker-compose default)
-# api_key = ""
+api_key = "DEqtxT7zLKqHuxnF0-LC4pxWzkj8Zb_8w9epacw2f5o"
 # Default index name
 index_name = "cognifs"
 
@@ -22,7 +22,9 @@ model = "nomic-embed-text"
 # LLM settings for intelligent tag generation
 provider = "local"
 # Path to GGUF model file (supports ~ expansion)
-model_path = "~/.local/share/models/guff/model.bin"
+# Default downloads to: ~/.local/share/models/guff/mistral-7b-instruct-v0.2.Q4_K_M.gguf
+# Run: ./scripts/download-model.sh to download a 7B model
+model_path = "/Users/lsh/.local/share/models/guff/mistral-7b-instruct-v0.2.Q4_K_M.gguf"
 # Executable name for local LLM (guff, llama.cpp, etc.)
 executable = "guff"
 
