--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,12 @@ clap = { version = "4.4", features = ["derive"] }
 dialoguer = "0.11"
 walkdir = "2"
 toml = "0.8"
+indicatif = "0.17"
+shellexpand = "3.1"
+pdf-extract = "0.7"
+lopdf = "0.34"
+zip = "0.6"
+csv = "1.3"
 
 [dev-dependencies]
 tempfile = "3.10"
