fix: Fix index collision bug and filter username from path tags
- Fix critical bug where file indices didn't match between file_plans and file_embeddings/file_tags_map
  - Files protected (Git repos) were counted but not added to file_plans
  - This caused clustering to use wrong indices and misplace files
  - Now indices are calculated only for non-protected files that are actually added to file_plans
  - Ensures file_embeddings and file_tags_map indices always match file_plans indices

- Filter username from path-based tag extraction
  - Add is_username_directory() to detect username-like directory names
  - Filter current username (USER/USERNAME env vars) from tags
  - Filter system directories (Users, home) from tags
  - Prevents tags like 'lsh' from being extracted from /Users/lsh/ paths
  - Add tests for username filtering and path tag extraction

- Add dims configuration option for embedding dimensions
  - Add dims field to OllamaConfig in settings.toml
  - LocalEmbeddingProvider now accepts explicit dimension parameter
  - Automatically detects dimension from model name as fallback
  - Uses AtomicUsize for thread-safe dimension updates
  - Updates dimension at runtime if Ollama returns different size

All tests passing

--- a/config/settings.toml
+++ b/config/settings.toml
@@ -16,7 +16,10 @@ index_name = "cognifs"
 url = "http://127.0.0.1:11434"
 # Default embedding model
 # Options: "nomic-embed-text" (768 dims) or "mxbai-embed-large" (1024 dims)
-model = "nomic-embed-text"
+model = "mxbai-embed-large"
+# Embedding dimension (must match the model's actual dimension)
+# Common values: 768 (nomic-embed-text), 1024 (mxbai-embed-large)
+dims = 1024
 
 [llm]
 # LLM settings for intelligent tag generation
