refactor: restructure Meilisearch indexing
- Change document ID to hash(file_hash + updated_at) instead of hash(path)
  This allows multiple versions of same content (different timestamps) to coexist

- Remove tags and text from Meilisearch Document structure
  Tags and text are no longer stored, only used for embedding generation

- Integrate LLM tag generation in cognifs-index
  Automatically uses LLM for intelligent tag generation with fallback to dictionary

- Update sync_index and delete operations to work with new ID system
  Add delete_by_path() method to handle multiple versions of same file

- Refactor CLI into separate binaries (cognifs-watch, cognifs-tag, etc.)
  Each command is now a standalone binary executable

- Add --auto-index flag to cognifs-watch for automatic indexing
- Add --save flag to cognifs-tag to save tags to index
- Add --index flag to cognifs-organize to index after organizing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,27 @@ license = "GPL-3.0"
 
 [[bin]]
 name = "cognifs"
-path = "src/main.rs"
+path = "src/bin/cognifs.rs"
+
+[[bin]]
+name = "cognifs-watch"
+path = "src/bin/cognifs-watch.rs"
+
+[[bin]]
+name = "cognifs-tag"
+path = "src/bin/cognifs-tag.rs"
+
+[[bin]]
+name = "cognifs-index"
+path = "src/bin/cognifs-index.rs"
+
+[[bin]]
+name = "cognifs-search"
+path = "src/bin/cognifs-search.rs"
+
+[[bin]]
+name = "cognifs-organize"
+path = "src/bin/cognifs-organize.rs"
 
 [dependencies]
 notify = "6.1"
