--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,8 @@ lopdf = "0.34"
 zip = "0.6"
 csv = "1.3"
 llama_cpp = "0.3"
+rayon = "1.8"
+futures = "0.3"
 
 [dev-dependencies]
 tempfile = "3.10"
