--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,10 +50,14 @@ pdf-extract = "0.7"
 lopdf = "0.34"
 zip = "0.6"
 csv = "1.3"
-llama_cpp = "0.3"
+llama_cpp = { version = "0.3", optional = true }
 rayon = "1.8"
 futures = "0.3"
 tokio-stream = "0.1"
+
+[features]
+default = []
+llm = ["llama_cpp"]
 
 [dev-dependencies]
 tempfile = "3.10"
