feat: support multiple Ollama servers for embeddings with load balancing
- Add MultiOllamaEmbeddingProvider with round-robin distribution and automatic failover
- Support multiple Ollama server URLs via optional 'urls' field in OllamaConfig
- Automatic fallback to next server if one fails (with 60s timeout per request)
- Update all binaries (index, organize, watch, tag) to use multi-Ollama when configured
- Add example configuration in settings.toml for multiple servers
- Maintain backward compatibility: single server still works as before

--- a/config/settings.toml
+++ b/config/settings.toml
@@ -27,6 +27,9 @@ dims = 4096
 [ollama]
 # Ollama connection settings (alternative to TEI)
 url = "http://127.0.0.1:11434"
+# Multiple Ollama servers for load balancing (optional)
+# If specified, will use round-robin distribution with automatic failover
+# urls = ["http://127.0.0.1:11434", "http://127.0.0.1:11435", "http://192.168.1.100:11434"]
 # Default embedding model
 # Options: "nomic-embed-text" (768 dims) or "mxbai-embed-large" (1024 dims)
 model = "mxbai-embed-large"
