Add chunking support for long document embeddings
- Add max_tokens configurable limit to OllamaConfig (default: 256)
- Implement chunk_text_for_embedding utility with word-boundary splitting
- Add compute_chunked_embedding method to EmbeddingProvider trait with mean pooling
- Update all indexing code to use chunked embeddings for long content
- Prevents information loss from truncation and distributes load across Ollama servers

This fixes the issue where Ollama was truncating long documents at 256 tokens,
now documents are chunked, embedded separately, and combined via mean pooling.

--- a/config/settings.toml
+++ b/config/settings.toml
@@ -36,6 +36,10 @@ model = "mxbai-embed-large"
 # Embedding dimension (must match the model's actual dimension)
 # Common values: 768 (nomic-embed-text), 1024 (mxbai-embed-large)
 dims = 1024
+# Maximum tokens per embedding request (for chunking long documents)
+# Default: 256 (mxbai-embed-large limit), 8192 for nomic-embed-text
+# Content exceeding this will be chunked and embeddings combined via mean pooling
+max_tokens = 256
 
 [llm]
 # LLM settings for intelligent tag generation
